--- a/esphome/config.yaml
+++ b/esphome/config.yaml
@@ -31,8 +31,8 @@ init: false
 startup: services
 name: ESPHome Device Builder Dev
 panel_title: ESPHome Builder
-version: 2025.6.0
+version: 2025.4.2
 slug: esphome
 description: Build your own smart home devices using ESPHome, no programming experience
   required.
-image: liuyi802/esphome-armv7
+image: ghcr.io/lonelystarto/esphome-hassio
